Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -176,7 +176,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Male height\n",
+    "m_xs, male_ys = evaluate_PDF(male_height)\n",
+    "plt.plot(m_xs, male_ys, label='male', linewidth=4, color='#beaed4') \n",
+    "\n",
+    "#Female height \n",
+    "f_xs, female_ys = evaluate_PDF(female_height)\n",
+    "plt.plot(f_xs, female_ys, label='female', linewidth=4, color='#fdc086')\n",
+    "plt.vlines(thresh,ymin=0,ymax=0.06)\n",
+    "plt.fill_betweenx(male_ys,x1 = m_xs,x2=thresh, where = m_xs < thresh,color='b')\n",
+    "plt.fill_betweenx(female_ys,x1=f_xs,x2=thresh, where = f_xs > thresh,color='b')\n",
+    "plt.xlabel('height (cm)')"
+   ]
   },
   {
    "cell_type": "markdown",
