Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -173,17 +173,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'evaluate_PDF' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-74d6abd1e729>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Male height\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mm_xs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmale_ys\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mevaluate_PDF\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcontrol\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm_xs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmale_ys\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'control'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlinewidth\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolor\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'#beaed4'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m#Female height\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'evaluate_PDF' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Male height\n",
     "m_xs, male_ys = evaluate_PDF(control)\n",
-    "plt.plot(m_xs, male_ys, label='male', linewidth=4, color='#beaed4') \n",
+    "plt.plot(m_xs, male_ys, label='control', linewidth=4, color='#beaed4') \n",
     "\n",
     "#Female height \n",
     "f_xs, female_ys = evaluate_PDF(experimental)\n",
-    "plt.plot(f_xs, female_ys, label='female', linewidth=4, color='#fdc086')\n",
+    "plt.plot(f_xs, female_ys, label='experimental', linewidth=4, color='#fdc086')\n",
     "plt.vlines(thresh,ymin=0,ymax=0.06)\n",
     "plt.fill_betweenx(male_ys,x1 = m_xs,x2=thresh, where = m_xs < thresh,color='b')\n",
     "plt.fill_betweenx(female_ys,x1=f_xs,x2=thresh, where = f_xs > thresh,color='b')\n",
