Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -168,6 +168,7 @@
    "source": [
     "sns.set(color_codes=True)\n",
     "sns.set(rc={'figure.figsize':(12,10)})\n",
+    "sns.distplot(control)\n",
     "sns.distplot(experimental)"
    ]
   },
