--- a/index.ipynb
+++ b/index.ipynb
@@ -212,8 +212,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experi\n",
-    "\n",
+    "mean_dif = experimental.mean() - \n",
+    "meA\n",
     "# -9.819999999999993"
    ]
   },
