Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -224,7 +224,7 @@
     }
    ],
    "source": [
-    "mean_dif = experimental.mean() - control-mean()\n",
+    "mean_dif = experimental - control-mean()\n",
     "mean_dif\n",
     "# -9.819999999999993"
    ]
