--- a/index.ipynb
+++ b/index.ipynb
@@ -264,7 +264,7 @@
    "outputs": [],
    "source": [
     "def sample_variance(sample):\n",
-    "    \n",
+    "    np.sum()\n",
     "    return None"
    ]
   },
