Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -264,7 +264,8 @@
    "outputs": [],
    "source": [
     "def sample_variance(sample):\n",
-    "    x_bar = np.mean(sanp.sum()\n",
+    "    x_bar = np.mean(sample)\n",
+    "    np.sum()\n",
     "    return None"
    ]
   },
