Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -265,7 +265,8 @@
    "source": [
     "def sample_variance(sample):\n",
     "    x_bar = np.mean(sample)\n",
-    "    np.sum()\n",
+    "    n = len(sample)\n",
+    "    np.sum(x)\n",
     "    return None"
    ]
   },
