Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -266,7 +266,7 @@
     "def sample_variance(sample):\n",
     "    x_bar = np.mean(sample)\n",
     "    n = len(sample)\n",
-    "    np.sum(x)\n",
+    "    np.sum(x-)\n",
     "    return None"
    ]
   },
