Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -266,7 +266,8 @@
     "def sample_variance(sample):\n",
     "    x_bar = np.mean(sample)\n",
     "    n = len(sample)\n",
-    "    np.sum(np.arraysample- x_bar)\n",
+    "    num = np.sum((sample- x_bar)**2)\n",
+    "    den = n\n",
     "    return None"
    ]
   },
