Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -267,8 +267,8 @@
     "    x_bar = np.mean(sample)\n",
     "    n = len(sample)\n",
     "    num = np.sum((sample- x_bar)**2)\n",
-    "    den = n\n",
-    "    return None"
+    "    den = n - 1\n",
+    "    return num / den"
    ]
   },
   {
@@ -285,7 +285,7 @@
    "outputs": [],
    "source": [
     "def pooled_variance(sample1, sample2):\n",
-    "    \n",
+    "    n1 = l\n",
     "    return None"
    ]
   },
