Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -287,7 +287,8 @@
     "def pooled_variance(sample1, sample2):\n",
     "    n1 = len(sample1)\n",
     "    n2 = len(sample2)\n",
-    "    s1\n",
+    "    sv1 = sample_variance(sample1)\n",
+    "    sv2 = sa\n",
     "    return None"
    ]
   },
