Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -288,7 +288,8 @@
     "    n1 = len(sample1)\n",
     "    n2 = len(sample2)\n",
     "    sv1 = sample_variance(sample1)\n",
-    "    sv2 = sa\n",
+    "    sv2 = sample_variance(sample2)\n",
+    "    num = n1\n",
     "    return None"
    ]
   },
