Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -289,7 +289,8 @@
     "    n2 = len(sample2)\n",
     "    sv1 = sample_variance(sample1)\n",
     "    sv2 = sample_variance(sample2)\n",
-    "    num = n1\n",
+    "    num = (n1 - 1) * sv1 + (n2 - 1) * sv2\n",
+    "    \n",
     "    return None"
    ]
   },
