Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -308,7 +308,9 @@
    "outputs": [],
    "source": [
     "def twosample_tstatistic(expr, ctrl):\n",
-    "    x_ba11\n",
+    "    x_bar1 = np.mean(expr)\n",
+    "    x_bar2 = np.mean(ctrl)\n",
+    "    num = x_\n",
     "    return None\n",
     "\n",
     "t_stat = None\n",
