Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -310,8 +310,9 @@
     "def twosample_tstatistic(expr, ctrl):\n",
     "    x_bar1 = np.mean(expr)\n",
     "    x_bar2 = np.mean(ctrl)\n",
+    "    \n",
     "    num = x_bar1 - x_bar2\n",
-    "    den = np.sqrt(pooled_varianc)\n",
+    "    den = np.sqrt()\n",
     "    return None\n",
     "\n",
     "t_stat = None\n",
