--- a/index.ipynb
+++ b/index.ipynb
@@ -310,9 +310,9 @@
     "def twosample_tstatistic(expr, ctrl):\n",
     "    x_bar1 = np.mean(expr)\n",
     "    x_bar2 = np.mean(ctrl)\n",
-    "    \n",
+    "    pv = pooled_variance(expr, ctrl)\n",
     "    num = x_bar1 - x_bar2\n",
-    "    den = np.sqrt()\n",
+    "    den = np.sqrt(pv * ((1/)))\n",
     "    return None\n",
     "\n",
     "t_stat = None\n",
