--- a/index.ipynb
+++ b/index.ipynb
@@ -308,11 +308,13 @@
    "outputs": [],
    "source": [
     "def twosample_tstatistic(expr, ctrl):\n",
+    "    n1 = len(expr)\n",
+    "    n2 = len(ctrl)\n",
     "    x_bar1 = np.mean(expr)\n",
     "    x_bar2 = np.mean(ctrl)\n",
     "    pv = pooled_variance(expr, ctrl)\n",
     "    num = x_bar1 - x_bar2\n",
-    "    den = np.sqrt(pv * ((1/)))\n",
+    "    den = np.sqrt(pv * ((1/n1) + (1)))\n",
     "    return None\n",
     "\n",
     "t_stat = None\n",
