Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -314,10 +314,10 @@
     "    x_bar2 = np.mean(ctrl)\n",
     "    pv = pooled_variance(expr, ctrl)\n",
     "    num = x_bar1 - x_bar2\n",
-    "    den = np.sqrt(pv * ((1/n1) + (1)))\n",
-    "    return None\n",
+    "    den = np.sqrt(pv * ((1/n1) + (1/n2)))\n",
+    "    return num / den\n",
     "\n",
-    "t_stat = None\n",
+    "t_stat = twosample_tstatistic(exper, ctrl)\n",
     "# -1.8915462966190268"
    ]
   },
