Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -303,9 +303,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1.8915462966190273"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def twosample_tstatistic(expr, ctrl):\n",
     "    n1 = len(expr)\n",
@@ -317,7 +328,8 @@
     "    den = np.sqrt(pv * ((1/n1) + (1/n2)))\n",
     "    return num / den\n",
     "\n",
-    "t_stat = twosample_tstatistic(exper, ctrl)\n",
+    "t_stat = twosample_tstatistic(experimental, control)\n",
+    "t_stat\n",
     "# -1.8915462966190268"
    ]
   },
