Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -355,7 +355,7 @@
     "    # initialize a matplotlib \"figure\"\n",
     "    plt.figure()\n",
     "    # generate points on the x axis between -4 and 4:\n",
-    "     \n",
+    "    points = np.linspace()\n",
     "    # use stats.t.pdf to get values on the probability density function for the t-distribution\n",
     "    \n",
     "    # Draw two sided boundary for critical-t\n",
