Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -355,11 +355,11 @@
     "    # initialize a matplotlib \"figure\"\n",
     "    plt.figure()\n",
     "    # generate points on the x axis between -4 and 4:\n",
-    "    points = np.linspace()\n",
+    "    points = np.linspace(-4,4,200)\n",
     "    # use stats.t.pdf to get values on the probability density function for the t-distribution\n",
-    "    \n",
+    "    pdf = stats.t.pdf\n",
     "    # Draw two sided boundary for critical-t\n",
-    "\n",
+    "    \n",
     "    return None\n",
     "\n",
     "n_control = None\n",
