--- a/index.ipynb
+++ b/index.ipynb
@@ -355,9 +355,9 @@
     "    # initialize a matplotlib \"figure\"\n",
     "    plt.figure()\n",
     "    # generate points on the x axis between -4 and 4:\n",
-    "    points = np.linspace(-4,4,200)\n",
+    "    xs = np.linspace(-4,4,200)\n",
     "    # use stats.t.pdf to get values on the probability density function for the t-distribution\n",
-    "    pdf = stats.t.pdf\n",
+    "    ys = stats.t.pdf(points, )\n",
     "    # Draw two sided boundary for critical-t\n",
     "    \n",
     "    return None\n",
