--- a/index.ipynb
+++ b/index.ipynb
@@ -357,7 +357,7 @@
     "    # generate points on the x axis between -4 and 4:\n",
     "    xs = np.linspace(-4,4,200)\n",
     "    # use stats.t.pdf to get values on the probability density function for the t-distribution\n",
-    "    ys = stats.t.pdf(points, )\n",
+    "    ys = stats.t.pdf(points, len(experimental), 0)\n",
     "    # Draw two sided boundary for critical-t\n",
     "    \n",
     "    return None\n",
