--- a/index.ipynb
+++ b/index.ipynb
@@ -353,12 +353,13 @@
     "def visualize_t(t_stat, n_control, n_experimental):\n",
     "\n",
     "    # initialize a matplotlib \"figure\"\n",
-    "    plt.figure()\n",
+    "    plt.figure(figsize=(8,5))\n",
     "    # generate points on the x axis between -4 and 4:\n",
     "    xs = np.linspace(-4,4,200)\n",
     "    # use stats.t.pdf to get values on the probability density function for the t-distribution\n",
-    "    ys = stats.t.pdf(points, len(experimental), 0)\n",
+    "    ys = stats.t.pdf(points, len(experimental), 0, 1)\n",
     "    # Draw two sided boundary for critical-t\n",
+    "    \n",
     "    \n",
     "    return None\n",
     "\n",
