--- a/index.ipynb
+++ b/index.ipynb
@@ -353,13 +353,17 @@
     "def visualize_t(t_stat, n_control, n_experimental):\n",
     "\n",
     "    # initialize a matplotlib \"figure\"\n",
-    "    plt.figure(figsize=(8,5))\n",
+    "    fig = plt.figure(figsize=(8,5))\n",
     "    # generate points on the x axis between -4 and 4:\n",
     "    xs = np.linspace(-4,4,200)\n",
     "    # use stats.t.pdf to get values on the probability density function for the t-distribution\n",
     "    ys = stats.t.pdf(points, len(experimental), 0, 1)\n",
     "    # Draw two sided boundary for critical-t\n",
-    "    \n",
+    "    ax = fig.gca()\n",
+    "    ax.plot(xs, ys, linewidth=3, color='darkblue')\n",
+    "    ax.axvline(t, color='red', linestyle='--', lw=5,label='t-statistic')\n",
+    "    ax.legend()\n",
+    "    plt.show()\n",
     "    \n",
     "    return None\n",
     "\n",
